--- a/Devops_assignments/Ansible/master.yml
+++ b/Devops_assignments/Ansible/master.yml
@@ -4,8 +4,8 @@
     ec2key: "working"
     count: 1
     tag_name: "webapp"
-    accesskey: "AKIAZV3EIFFQGJEHVLV6"
-    secretkey: "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"
+    accesskey: ""
+    secretkey: ""
 
 - hosts: tag_Name_webapp
   roles:
